k8s/clusters/lab/apps/nexterm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexterm
  namespace: nexterm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nexterm
      app.kubernetes.io/instance: nexterm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nexterm
        app.kubernetes.io/instance: nexterm
    spec:
      nodeSelector:
        kubernetes.io/hostname: n5
      containers:
        - name: nexterm
          image: germannewsmaker/nexterm:1.0.5-OPEN-PREVIEW
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6989
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nexterm-data
