k8s/clusters/lab/apps/nexterm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexterm
  namespace: nexterm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 6989
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nexterm
    app.kubernetes.io/instance: nexterm
